crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_chunking_metadata_vector_search_sql_offset.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 612,
    "answer_offset": [
      48,
      50
    ],
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.796
  },
  {
    "id": 349,
    "answer_offset": [
      103,
      109
    ],
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.785
  },
  {
    "id": 948,
    "answer_offset": [
      61,
      94
    ],
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.555
  },
  {
    "id": 1277,
    "answer_offset": [
      62,
      95
    ],
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.555
  }
]
