crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_chunking_metadata_vector_search_sql_offset_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer_offset, trunc(_score, 3) FROM vector_search(qs, 'second') order by _score DESC, id LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer_offset, trunc(vector_search(qs, Utf8("second"))._score,Int64(3))                                                                                                 |
|               |   Sort: vector_search(qs, Utf8("second"))._score DESC NULLS FIRST, vector_search(qs, Utf8("second")).id ASC NULLS LAST, fetch=4                                                                                                                             |
|               |     Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer_offset, trunc(vector_search(qs, Utf8("second"))._score, Int64(3)), vector_search(qs, Utf8("second"))._score                                                  |
|               |       TableScan: vector_search(qs, Utf8("second")) projection=[_score, answer_offset, id]                                                                                                                                                                   |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer_offset@1 as answer_offset, trunc(vector_search(qs, Utf8("second"))._score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second"))._score,Int64(3))]                                                                 |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                    |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                        |
|               |       ProjectionExec: expr=[id@0 as id, answer_offset@1 as answer_offset, trunc(_score@2, 3) as trunc(vector_search(qs, Utf8("second"))._score,Int64(3)), _score@2 as _score]                                                                               |
|               |         AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(answer_offset) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_offset, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score] |
|               |           RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                                 |
|               |             AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(answer_offset) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_offset, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]      |
|               |               ProjectionExec: expr=[union_extract(json_get(key@1, id), int) as id, answer_offset@0 as answer_offset, 1 - distance@2 as _score]                                                                                                              |
|               |                 BytesProcessedExec                                                                                                                                                                                                                          |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                      |
|               |                     S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                            |
|               |                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
